fix: prefers-reduced-motion for "delight visually" previously it wasn't supposed to be animated but due to the individually wrapping characters fix it was no longer overriding until now 👍

--- a/src/features/about/About.module.scss
+++ b/src/features/about/About.module.scss
@@ -86,7 +86,7 @@ $twisted-orange: #f4b400;
 }
 
 @media (prefers-reduced-motion) {
-  .delightfulText span {
+  .delightfulText > .nowrap > span {
     animation: none;
   }
 
